welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: '=>' expected but '=' found.
    case (a,b) if Math.abs(a)!=a && Math.abs(b)=b =>true
                                               ^posNeg:4: error: '=>' expected but '=' found.
    case (a,b) if Math.abs(a)=a && Math.abs(b)!=b =>true
                             ^