welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (a,b) match {
    case (a,b) if Math.abs(a)!=a && Math.abs(b)=b =>true
    case (a,b) if Math.abs(a)=a && Math.abs(b)!=b =>true
    case (a,b) if Math.abs(a)!=a && Math.abs(b)!=b =>true
    case (_,_) =>false
  }}